Data types update

--- a/ClientApp/src/app/components/forecast-chart/forecast-chart.component.html
+++ b/ClientApp/src/app/components/forecast-chart/forecast-chart.component.html
@@ -1,4 +1,4 @@
-<div style="max-width: 800px; margin: auto">
+<div style="max-width: 800px; margin: 40px auto">
   <mat-form-field appearance="outline">
     <mat-label>Location</mat-label>
     <mat-select
